tests/types/errors/optional_call_without_check.expr
class Dog {
    bark() { return "woof"; }
}

Dog? maybeDog = Dog();
maybeDog();